syntax = "proto3";

package menuPackage;

service Menu {
    rpc addMenuItem(MenuItemInput) returns (SuccessMessageResponse);
    rpc getMenuItems(MenuRequest) returns (GetMenuItemsResponse);
    rpc getMenuItemsById(IdRequest) returns (MenuItem);
    rpc getMenuItemsByCategoryId(MenuItemByCategoryIdRequest) returns (GetMenuItemsResponse);
    rpc addCategory(CategoryInput) returns (AddCategoryResponse); 
    rpc getCategory(CategoryRequest) returns(GetCategoryResponse);
    rpc getCategoryById(IdRequest) returns (CategoryItem);
    rpc getCategoryId(CategoryInput) returns (CategoryInput);
    rpc getMenuItemsWithCategoryInfo(MenuRequest) returns (GetMenuItemsWithCategoryResponse);
    rpc deleteMenuItem(IdRequest) returns (SuccessMessageResponse);
    rpc updateMenuItem(MenuItem) returns (SuccessMessageResponse);
    rpc deleteCategory(IdRequest) returns (SuccessMessageResponse);
    rpc updateCategory(CategoryItem) returns (SuccessMessageResponse);
}

message MenuRequest {
    // Add necessary request parameters
}

message MenuItemInput {
    string name = 1;
    string description = 2;
    string category = 3;
    double price = 4;
}

message GetMenuItemsResponse {
    repeated MenuItem items = 1;
}

message MenuItem {
    string id = 1;
    string name = 2;
    string description = 3;
    string category = 4;
    double price = 5;
    // Other fields
}

message SuccessMessageResponse {
    bool success = 1;
    string message = 2;
}

message MenuItemByCategoryIdRequest {
    string categoryId = 1;
}

message CategoryInput {
    string category = 1;
    string subCategory = 2;
}

message CategoryRequest {}

message IdRequest {
    string id = 1;
}

message CategoryItem {
    string id = 1;
    string category = 2;
    string subCategory = 3;
}

message AddCategoryResponse {
    bool success = 1;
    string message = 2;
}

message GetCategoryResponse {
    repeated CategoryItem categories = 1;
}
message GetCategoryIdResponse{
    string id = 1;
}

message GetMenuItemsWithCategoryResponse {
    repeated MenuItemsWithCategory items = 1;
}
message MenuItemsWithCategory {
    string id = 1;
    string name = 2;
    string description = 3;
    string category = 4;
    string subcategory = 5;
    double price = 6;
}